--- a/public/blog.html
+++ b/public/blog.html
@@ -66,10 +66,12 @@
 
           <div class="col s12 m6">
             <div class="card medium">
-             <div class="card-image">
-              <img src="images/editor.jpeg">
-               <!-- <span class="card-title">Card Title</span> -->
-             </div>
+             <a href="#">
+               <div class="card-image">
+                <img src="images/editor.jpeg">
+                 <!-- <span class="card-title">Card Title</span> -->
+               </div>
+             </a>
              <div class="card-content">
                <p>I am a very simple card. I am good at containing small bits of information.
                  I am convenient because I require little markup to use effectively.
