--- a/public/blog.html
+++ b/public/blog.html
@@ -64,12 +64,11 @@
 
         <section id="posts" class="row">
 
-          <div class="col s12 m6">
+          <!-- <div class="col s12 m6">
             <div class="card medium">
              <a href="#">
                <div class="card-image">
                 <img src="images/editor.jpeg">
-                 <!-- <span class="card-title">Card Title</span> -->
                </div>
              </a>
              <div class="card-content">
@@ -160,7 +159,7 @@
           <a href="#">Blog Title - 2/13/2016</a>
         </div>
        </div>
-     </div>
+     </div> -->
 
     </section>
 
