--- a/public/new_post.html
+++ b/public/new_post.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Blog</title>
+    <title>New Post</title>
     <!--Import jQuery before materialize.js-->
     <script
       defer src="https://code.jquery.com/jquery-2.2.4.min.js"
@@ -28,8 +28,8 @@
       <nav class="deep-purple darken-4">
         <div class="nav-wrapper">
 
-          <a href="/index.html" class="brand-logo">
-            <span class="logo-text">Blog</span>
+          <a href="/admin.html" class="brand-logo">
+            <span class="logo-text">Admin</span>
           </a>
 
           <a class="button-collapse" data-activates="mobileNav">
@@ -37,7 +37,7 @@
           </a>
 
           <ul class="right hide-on-med-and-down">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="/admin.html">Admin</a></li>
             <li class="firstNavItem"></li>
             <li class="secondNavItem"></li>
           </ul>
@@ -54,20 +54,38 @@
 
     <main>
 
-      <div class="parallax-container">
-        <div class="parallax"><img src="images/forest_flowers.jpeg"></div>
-      </div>
-
       <div class="container">
 
         <h2>New Post</h2>
 
         <section id="newPost" class="row">
 
+            <form class="col">
 
-    </section>
+              <div class="input-field col s6">
+                <input id="title" type="text" class="validate">
+                <label for="title">Title</label>
+              </div>
 
-    </div><!--container-->
+             <div class="input-field col s6">
+               <input id="img" type="text" class="validate">
+               <label for="img">Image</label>
+             </div>
+
+             <div class="input-field col s12">
+               <textarea id="textarea1" class="materialize-textarea"></textarea>
+               <label for="textarea1">Textarea</label>
+             </div>
+
+             <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+               <i class="material-icons right">send</i>
+             </button>
+
+           </form>
+
+       </section>
+
+      </div><!--container-->
 
     </main>
 
