Add new_post src file to new_post.html

--- a/public/new_post.html
+++ b/public/new_post.html
@@ -9,7 +9,7 @@
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
-    <script defer src="js/blog.js"></script>
+    <script defer src="js/new_post.js"></script>
 
     <!--Import Google Icon Font-->
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -73,8 +73,8 @@
              </div>
 
              <div class="input-field col s12">
-               <textarea id="textarea1" class="materialize-textarea"></textarea>
-               <label for="textarea1">Textarea</label>
+               <textarea id="content" class="materialize-textarea"></textarea>
+               <label for="textarea1">Content</label>
              </div>
 
              <button class="btn waves-effect waves-light" type="submit" name="action">Submit
