--- a/public/all_posts.html
+++ b/public/all_posts.html
@@ -9,6 +9,8 @@
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
+    <script defer src="js/nav.js"></script>
+    
     <script defer src="js/all_posts.js"></script>
 
     <!--Import Google Icon Font-->
