--- a/public/post.html
+++ b/public/post.html
@@ -9,6 +9,7 @@
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
+    <script defer src="js/nav.js"></script>
     <script defer src="js/post.js"></script>
 
     <!--Import Google Icon Font-->
@@ -58,11 +59,11 @@
 
 
         <section id="post" class="row">
-          <div class="col s12 ind_post">
+          <!-- <div class="col s12 ind_post">
             <h2>Post Title</h2>
              <img src="https://static.pexels.com/photos/209800/pexels-photo-209800.jpeg">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
+          </div> -->
 
 
 
