Close #6 Create page for individual blog post.

--- a/public/blog_post.html
+++ b/public/blog_post.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
     <script defer src="js/nav.js"></script>
-    <script defer src="js/blog.js"></script>
+    <script defer src="js/blog_post.js"></script>
 
     <!--Import Google Icon Font-->
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -55,19 +55,11 @@
 
     <main>
 
-      <div class="parallax-container">
-        <div class="parallax"><img src="images/forest_flowers.jpeg"></div>
-      </div>
-
       <div class="container">
 
-        <h2>Posts</h2>
+        <section id="blog_post" class="row">
 
-        <section id="posts" class="row">
-
-
-
-    </section>
+        </section>
 
     </div><!--container-->
 
