tags rougly displaying to page #20

--- a/public/tags.html
+++ b/public/tags.html
@@ -55,13 +55,13 @@
     <main>
 
       <div class="container">
-        <section id="tags" class="row">
+        <section class="row">
 
 
           <div class="col s12 m6">
 
-          <form action="#">
-              <p>
+          <form action="#" id="tags">
+              <!-- <p>
                 <input type="checkbox" id="test5" />
                 <label for="test5">Red</label>
               </p>
@@ -77,7 +77,7 @@
                 <input type="checkbox" id="test8" />
                 <label for="test8">Blue</label>
               </p>
-          <a class="waves-effect waves-light btn">Delete</a>
+          <a class="waves-effect waves-light btn">Delete</a> -->
             </form>
 
 </div>
