Add delete to route.

--- a/public/post.html
+++ b/public/post.html
@@ -60,6 +60,27 @@
         <section id="post" class="row">
 
         </section>
+      <div>  <a id="deletePost" class="waves-effect waves-light btn-large red">
+              <i class="material-icons left">delete</i>
+              Delete
+            </a>
+          </div>
+
+          <div id="deleteModal" class="modal">
+            <div class="modal-content">
+              <h4>Delete this post?</h4>
+              <p>You won't be able to undo this operation.</p>
+            </div>
+
+            <div class="modal-footer">
+          <a id="confirmDelete" class="modal-action modal-close waves-effect waves-green btn-flat">
+            <strong>Delete</strong>
+          </a>
+
+          <a id="cancelDelete" class="modal-action modal-close waves-effect waves-red btn-flat">
+            Cancel
+          </a>
+        </div>
 
     </div><!--container-->
 
