--- a/public/post.html
+++ b/public/post.html
@@ -58,15 +58,20 @@
       <div class="container">
 
         <section id="post" class="row">
+          <!-- <button id="deletePost" class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right">send</i>
+  </button> -->
+
 
         </section>
-      <div>  <a id="deletePost" class="waves-effect waves-light btn-large red">
+        <a class="waves-effect waves-light btn" id="deletePost" href="#modal1">Delete</a>
+      <!-- <div>  <a id="deletePost" class="waves-effect waves-light btn-large red">
               <i class="material-icons left">delete</i>
               Delete
             </a>
-          </div>
+          </div> -->
 
-          <div id="deleteModal" class="modal">
+          <!-- <div id="deleteModal" class="modal">
             <div class="modal-content">
               <h4>Delete this post?</h4>
               <p>You won't be able to undo this operation.</p>
@@ -80,7 +85,7 @@
           <a id="cancelDelete" class="modal-action modal-close waves-effect waves-red btn-flat">
             Cancel
           </a>
-        </div>
+        </div> -->
 
     </div><!--container-->
 
