--- a/public/post.html
+++ b/public/post.html
@@ -64,8 +64,19 @@
 
 
         </section>
-        <a class="waves-effect waves-light btn" id="deletePost" href="#modal1">Delete</a>
-      <!-- <div>  <a id="deletePost" class="waves-effect waves-light btn-large red">
+        <a class="waves-effect waves-light btn deep-purple darken-4" id="deletePost" href="#modal1">Delete</a>
+
+        <div id="modal1" class="modal">
+            <div class="modal-conent">
+              <h4>Are you sure you want to delete this post? </h4>
+              <p>You can't undo this action.</p>
+            </div>
+            <div class="modal-footer">
+ <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+ </div>
+ </div>
+
+       <!-- <div>  <a id="deletePost" class="waves-effect waves-light btn-large red">
               <i class="material-icons left">delete</i>
               Delete
             </a>
