Close #31 Add modal 'Are you sure?' comments to delete post function

--- a/public/post.html
+++ b/public/post.html
@@ -72,9 +72,15 @@
               <p>You can't undo this action.</p>
             </div>
             <div class="modal-footer">
- <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
- </div>
- </div>
+         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat" id="confirmDelete">Agree</a>
+
+         <a id="cancelDelete" class="modal-action modal-close waves-effect waves-red btn-flat">
+           Cancel
+         </a>
+         </div>
+       </div>
+
+       <a class="waves-effect waves-light btn deep-purple darken-4">Edit Post</a>
 
        <!-- <div>  <a id="deletePost" class="waves-effect waves-light btn-large red">
               <i class="material-icons left">delete</i>
