Fill edit page with current data.

--- a/public/post.html
+++ b/public/post.html
@@ -80,7 +80,7 @@
          </div>
        </div>
 
-       <a class="waves-effect waves-light btn deep-purple darken-4">Edit Post</a>
+       <a class="waves-effect waves-light btn deep-purple darken-4" id="editPost" href="edit_post.html">Edit Post</a>
 
        <!-- <div>  <a id="deletePost" class="waves-effect waves-light btn-large red">
               <i class="material-icons left">delete</i>
