--- a/public/edit_post.html
+++ b/public/edit_post.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>New Post</title>
+    <title>Edit Post</title>
     <!--Import jQuery before materialize.js-->
     <script
       defer src="https://code.jquery.com/jquery-2.2.4.min.js"
@@ -78,9 +78,7 @@
                <label for="textarea1">Content</label>
              </div>
 
-             <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-               <i class="material-icons right">send</i>
-             </button>
+             <a class="waves-effect waves-light btn deep-purple darken-4" id="updatePost">Edit Post</a>
 
            </form>
 
