Close #32 Create login html

--- a/public/login.html
+++ b/public/login.html
@@ -54,9 +54,15 @@
     </div>
 
     <main>
+      <div class="container">
+<div class="row">
+  <span></span>
+</div>
+
       <div class="row">
-        <form id="loginForm" class="col offset-s3 s6">
-          <div class="card">
+        <div class="col offset-m3 m6 s12 ">
+        <form id="loginForm" >
+          <div class="card ">
             <div class="card-content">
               <span class="card-title">Log in</span>
               <div class="row">
@@ -83,6 +89,9 @@
           </div>
         </form>
       </div>
+      </div>
+
+    </div>
     </main>
 
     <footer class="page-footer deep-purple darken-4">
