--- a/public/tags.html
+++ b/public/tags.html
@@ -60,7 +60,7 @@
 
           <div class="col s12 m6">
 
-          <form action="#" id="tags">
+          <form action="#" id="tagsForm">
               <!-- <p>
                 <input type="checkbox" id="test5" />
                 <label for="test5">Red</label>
