--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
     <script defer src="js/nav.js"></script>
-    <script defer src="js/blog.js"></script>
+    <script defer src="js/login.js"></script>
 
     <!--Import Google Icon Font-->
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
