Update nav bars #29

--- a/public/edit_post.html
+++ b/public/edit_post.html
@@ -39,14 +39,18 @@
 
           <ul class="right hide-on-med-and-down">
             <li><a href="/admin.html">Admin</a></li>
-            <li class="firstNavItem"></li>
-            <li class="secondNavItem"></li>
+            <li><a href="/new_post.html">Create New Post</a></li>
+            <li><a href="/all_posts.html">Edit Posts</a></li>
+            <li><a href="/tags.html">Edit Tags</a></li>
+            <li><a href="/users.html">Users</a></li>
           </ul>
 
           <ul id="mobileNav" class="side-nav">
-            <li><a href="/index.html">Posts</a></li>
-            <li class="firstNavItem"></li>
-            <li class="secondNavItem"></li>
+            <li><a href="/admin.html">Admin</a></li>
+            <li><a href="/new_post.html">Create New Post</a></li>
+            <li><a href="/all_posts.html">Edit Posts</a></li>
+            <li><a href="/tags.html">Edit Tags</a></li>
+            <li><a href="/users.html">Users</a></li>
           </ul>
 
         </div>
