--- a/public/all_posts.html
+++ b/public/all_posts.html
@@ -10,7 +10,6 @@
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
     <script defer src="js/nav.js"></script>
-    
     <script defer src="js/all_posts.js"></script>
 
     <!--Import Google Icon Font-->
@@ -30,7 +29,7 @@
       <nav class="deep-purple darken-4">
         <div class="nav-wrapper">
 
-          <a href="/index.html" class="brand-logo">
+          <a href="/admin.html" class="brand-logo">
             <span class="logo-text">ADMIN All Posts</span>
           </a>
 
@@ -39,15 +38,19 @@
           </a>
 
           <ul class="right hide-on-med-and-down">
-            <li><a href="/index.html">Home</a></li>
-            <li class="firstNavItem"></li>
-            <li class="secondNavItem"></li>
+            <li><a href="/admin.html">Admin</a></li>
+            <li><a href="/new_post.html">Create New Post</a></li>
+            <li><a href="/all_posts.html">Edit Posts</a></li>
+            <li><a href="/tags.html">Edit Tags</a></li>
+            <li><a href="/users.html">Users</a></li>
           </ul>
 
           <ul id="mobileNav" class="side-nav">
-            <li><a href="/index.html">Posts</a></li>
-            <li class="firstNavItem"></li>
-            <li class="secondNavItem"></li>
+            <li><a href="/admin.html">Admin</a></li>
+            <li><a href="/new_post.html">Create New Post</a></li>
+            <li><a href="/all_posts.html">Edit Posts</a></li>
+            <li><a href="/tags.html">Edit Tags</a></li>
+            <li><a href="/users.html">Users</a></li>
           </ul>
 
         </div>
