--- a/public/new_post.html
+++ b/public/new_post.html
@@ -9,6 +9,7 @@
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
+    <script defer src="js/nav.js"></script
     <script defer src="js/new_post.js"></script>
 
     <!--Import Google Icon Font-->
@@ -38,14 +39,18 @@
 
           <ul class="right hide-on-med-and-down">
             <li><a href="/admin.html">Admin</a></li>
-            <li class="firstNavItem"></li>
-            <li class="secondNavItem"></li>
+            <li><a href="/new_post.html">Create New Post</a></li>
+            <li><a href="/all_posts.html">Edit Posts</a></li>
+            <li><a href="/tags.html">Edit Tags</a></li>
+            <li><a href="/users.html">Users</a></li>
           </ul>
 
           <ul id="mobileNav" class="side-nav">
-            <li><a href="/index.html">Posts</a></li>
-            <li class="firstNavItem"></li>
-            <li class="secondNavItem"></li>
+            <li><a href="/admin.html">Admin</a></li>
+            <li><a href="/new_post.html">Create New Post</a></li>
+            <li><a href="/all_posts.html">Edit Posts</a></li>
+            <li><a href="/tags.html">Edit Tags</a></li>
+            <li><a href="/users.html">Users</a></li>
           </ul>
 
         </div>
