Close #36 Add event listener to tags and create array of marked items.

--- a/public/tags.html
+++ b/public/tags.html
@@ -81,8 +81,8 @@
               <p>
                 <input type="checkbox" id="test8" />
                 <label for="test8">Blue</label>
-              </p>
-          <a class="waves-effect waves-light btn">Delete</a> -->
+              </p>-->
+          <a class="waves-effect waves-light btn" id="deleteTag">Delete</a>
             </form>
 
 </div>
