--- a/public/tags.html
+++ b/public/tags.html
@@ -89,8 +89,8 @@
 
 
 <div class="col s12 m6 input-field">
-  <input placeholder="Add New Tag" id="first_name" type="text" class="validate">
-            <label for="first_name"></label>
+  <input placeholder="Add New Tag" id="new_tag" type="text" class="validate">
+            <label for="new_tag"></label>
             <button class="btn waves-effect waves-light" type="submit" name="action">Submit
     <i class="material-icons right">send</i>
   </button>
