added nav bar to users page

--- a/public/admin.html
+++ b/public/admin.html
@@ -29,7 +29,8 @@
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
-            <span class="logo-text">ADMIN</span>
+            <span class="logo-text">
+              Admin</span>
           </a>
 
           <a class="button-collapse" data-activates="mobileNav">
@@ -64,7 +65,7 @@
               <div class="col s12">
                 <a href="new_post.html">
                 <div class="card-panel teal center-align">
-                  <span class="white-text">New Post
+                  <span class="white-text"><h5>New Post</h5>
                   </span>
                 </div>
                 </a>
@@ -74,7 +75,7 @@
               <div class="col s12">
                 <a href="all_posts.html">
                 <div class="card-panel teal center-align">
-                  <span class="white-text">All Posts
+                  <span class="white-text"><h5>All Posts</h5>
                   </span>
                 </div>
                 </a>
@@ -84,7 +85,7 @@
               <div class="col s12">
                 <a href="tags.html">
                 <div class="card-panel teal center-align">
-                  <span class="white-text">Tags
+                  <span class="white-text"><h5>Tags</h5>
                   </span>
                 </div>
                 </a>
@@ -94,7 +95,7 @@
               <div class="col s12">
                 <a href="users.html">
                 <div class="card-panel teal center-align">
-                  <span class="white-text ">Users
+                  <span class="white-text "><h5>Users</h5>
                   </span>
                 </div>
                 </a>
