--- a/public/edit_post.html
+++ b/public/edit_post.html
@@ -30,7 +30,7 @@
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
-            <span class="logo-text">Admin</span>
+            <span class="logo-text">Edit Post</span>
           </a>
 
           <a class="button-collapse" data-activates="mobileNav">
@@ -61,7 +61,7 @@
 
       <div class="container">
 
-        <h2>New Post</h2>
+        <h2>Edit Post</h2>
 
         <section id="newPost" class="row">
 
