--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,10 @@
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
     <script defer src="js/nav.js"></script>
+
     <script defer src="js/login.js"></script>
+    <script defer src="js/token.js"></script>
+
 
     <!--Import Google Icon Font-->
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -36,12 +39,6 @@
           <a class="button-collapse" data-activates="mobileNav">
             <i class="material-icons">menu</i>
           </a>
-
-          <ul class="right hide-on-med-and-down">
-            <li><a href="/index.html">Home</a></li>
-            <li class="firstNavItem"></li>
-            <li class="secondNavItem"></li>
-          </ul>
 
           <ul id="mobileNav" class="side-nav">
             <li><a href="/index.html">Posts</a></li>
