--- a/public/new_post.html
+++ b/public/new_post.html
@@ -30,7 +30,7 @@
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
-            <span class="logo-text">Admin</span>
+            <span class="logo-text">New Post</span>
           </a>
 
           <a class="button-collapse" data-activates="mobileNav">
@@ -67,12 +67,12 @@
 
             <form class="col">
 
-              <div class="input-field col s6">
+              <div class="input-field col s12">
                 <input id="title" type="text" class="validate">
                 <label for="title">Title</label>
               </div>
 
-             <div class="input-field col s6">
+             <div class="input-field col s12">
                <input id="img" type="text" class="validate">
                <label for="img">Image</label>
              </div>
