--- a/public/post.html
+++ b/public/post.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Blog</title>
+    <title>Post</title>
     <!--Import jQuery before materialize.js-->
     <script
       defer src="https://code.jquery.com/jquery-2.2.4.min.js"
@@ -30,7 +30,7 @@
         <div class="nav-wrapper">
 
           <a href="/index.html" class="brand-logo">
-            <span class="logo-text">Blog</span>
+            <span class="logo-text">Post</span>
           </a>
 
           <a class="button-collapse" data-activates="mobileNav">
