--- a/public/tags.html
+++ b/public/tags.html
@@ -30,7 +30,7 @@
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
-            <span class="logo-text">ADMIN Tags</span>
+            <span class="logo-text">Tags</span>
           </a>
 
           <a class="button-collapse" data-activates="mobileNav">
