--- a/public/users.html
+++ b/public/users.html
@@ -11,6 +11,8 @@
     <script defer src="js/vendor/materialize.js"></script>
     <script defer src="js/nav.js"></script>
     <script defer src="js/users.js"></script>
+    <script defer src="js/token.js"></script>
+
 
     <!--Import Google Icon Font-->
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -95,7 +97,6 @@
         <li class="collection-header"><h4>Users</h4></li>
         <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">delete</i></a></div></li>
         <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">delete</i></a></div></li>
-
       </ul>
   </div>
 </div>
