--- a/public/all_posts.html
+++ b/public/all_posts.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ADMIN All Posts</title>
+    <title>All Posts</title>
     <!--Import jQuery before materialize.js-->
     <script
       defer src="https://code.jquery.com/jquery-2.2.4.min.js"
@@ -30,7 +30,7 @@
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
-            <span class="logo-text">ADMIN All Posts</span>
+            <span class="logo-text">All Posts</span>
           </a>
 
           <a class="button-collapse" data-activates="mobileNav">
