Make tag functional but ugly #26

--- a/public/new_post.html
+++ b/public/new_post.html
@@ -65,7 +65,7 @@
 
         <section id="newPost" class="row">
 
-            <form class="col">
+            <form class="col s12">
 
               <div class="input-field col s12">
                 <input id="title" type="text" class="validate">
