--- a/public/tags.html
+++ b/public/tags.html
@@ -86,22 +86,52 @@
             </form>
 
 </div>
+</section>
+<section id="newTag" class="row">
+
+    <form class="col s12">
+
+      <div class="input-field col s6">
+        <input id="tagName" type="text" class="validate">
+        <label for="tagName">Tag Name</label>
+      </div>
+
+     <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+       <i class="material-icons right">send</i>
+     </button>
+
+   </form>
+
+</section>
+
+        <!-- <form class="col s12" id="new_tag">
+
+          <div class="input-field col s6">
+            <input id="tag_name" type="text" class="validate">
+            <label for="tag_name">Tag Name</label>
+          </div>
+
+          <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+            <i class="material-icons right">send</i>
+          </button>
+
+        </form> -->
+
+<!-- <div class="col s12 m6 input-field">
 
 
-<div class="col s12 m6 input-field">
-  <input placeholder="Add New Tag" id="new_tag" type="text" class="validate">
-            <label for="new_tag"></label>
-            <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+  <input placeholder="Add New Tag"  type="text" class="validate" id="new_tag">
+            <label for="new_tag" ></label>
+            <button class="btn waves-effect waves-light" id="submit_tag" type="submit" name="action">Submit
     <i class="material-icons right">send</i>
   </button>
 
-          </div>
+          </div> -->
 
 
 
 
 
-    </section>
 
     </div><!--container-->
 
