--- a/public/post.html
+++ b/public/post.html
@@ -29,8 +29,9 @@
       <nav class="deep-purple darken-4">
         <div class="nav-wrapper">
 
-          <a href="/index.html" class="brand-logo">
-            <span class="logo-text">Post</span>
+          <a href="/admin.html" class="brand-logo">
+            <span class="logo-text">
+              Post</span>
           </a>
 
           <a class="button-collapse" data-activates="mobileNav">
@@ -38,15 +39,19 @@
           </a>
 
           <ul class="right hide-on-med-and-down">
-            <li><a href="/index.html">Home</a></li>
-            <li class="firstNavItem"></li>
-            <li class="secondNavItem"></li>
+            <li><a href="/admin.html">Admin</a></li>
+            <li><a href="/new_post.html">Create New Post</a></li>
+            <li><a href="/all_posts.html">Edit Posts</a></li>
+            <li><a href="/tags.html">Edit Tags</a></li>
+            <li><a href="/users.html">Users</a></li>
           </ul>
 
           <ul id="mobileNav" class="side-nav">
-            <li><a href="/index.html">Posts</a></li>
-            <li class="firstNavItem"></li>
-            <li class="secondNavItem"></li>
+            <li><a href="/admin.html">Admin</a></li>
+            <li><a href="/new_post.html">Create New Post</a></li>
+            <li><a href="/all_posts.html">Edit Posts</a></li>
+            <li><a href="/tags.html">Edit Tags</a></li>
+            <li><a href="/users.html">Users</a></li>
           </ul>
 
         </div>
