--- a/public/users.html
+++ b/public/users.html
@@ -63,7 +63,7 @@
 <div class="container">
   <div class="row">
     <div class="s12 col collectionCol">
-    <form id="loginForm" >
+    <form id="newUserForm" >
       <div class="card ">
         <div class="card-content">
           <span class="card-title">New User</span>
@@ -93,10 +93,9 @@
   </div>
   </div>
   <div class="row">
-    <ul class="collection with-header">
+    <ul class="collection with-header" id="allUsers">
         <li class="collection-header"><h4>Users</h4></li>
-        <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">delete</i></a></div></li>
-        <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">delete</i></a></div></li>
+
       </ul>
   </div>
 </div>
