--- a/public/users.html
+++ b/public/users.html
@@ -66,7 +66,7 @@
     <form id="newUserForm" >
       <div class="card ">
         <div class="card-content">
-          <span class="card-title">New User</span>
+          <span class="card-title">Add New User</span>
           <div class="row">
             <div class="input-field col s12">
               <input placeholder="Email" id="email" type="text" class="validate">
@@ -84,8 +84,8 @@
 
         <div class="card-action">
           <button class="waves-effect waves-light btn-large" type="submit" name="action">
-            <i class="material-icons left">lock</i>
-            Add
+            <i class="material-icons left">person</i>
+            Submit
           </button>
         </div>
       </div>
@@ -94,7 +94,9 @@
   </div>
   <div class="row">
     <ul class="collection with-header" id="allUsers">
-        <li class="collection-header"><h4>Users</h4></li>
+        <li class="collection-header"><h5>Users</h5>
+<h6 class="right-align">DELETE</h6>
+        </li>
 
       </ul>
   </div>
