--- a/public/all_posts.html
+++ b/public/all_posts.html
@@ -43,6 +43,7 @@
             <li><a href="/all_posts.html">Edit Posts</a></li>
             <li><a href="/tags.html">Edit Tags</a></li>
             <li><a href="/users.html">Users</a></li>
+            <li id="login"></li>
           </ul>
 
           <ul id="mobileNav" class="side-nav">
@@ -51,6 +52,7 @@
             <li><a href="/all_posts.html">Edit Posts</a></li>
             <li><a href="/tags.html">Edit Tags</a></li>
             <li><a href="/users.html">Users</a></li>
+            <li id="login2"></li>
           </ul>
 
         </div>
