--- a/public/post.html
+++ b/public/post.html
@@ -44,6 +44,7 @@
             <li><a href="/all_posts.html">Edit Posts</a></li>
             <li><a href="/tags.html">Edit Tags</a></li>
             <li><a href="/users.html">Users</a></li>
+            <li id="login"></li>
           </ul>
 
           <ul id="mobileNav" class="side-nav">
@@ -52,6 +53,7 @@
             <li><a href="/all_posts.html">Edit Posts</a></li>
             <li><a href="/tags.html">Edit Tags</a></li>
             <li><a href="/users.html">Users</a></li>
+            <li id="login"></li>
           </ul>
 
         </div>
