Close #53 Add logout link to nav.

--- a/public/users.html
+++ b/public/users.html
@@ -45,6 +45,7 @@
             <li><a href="/all_posts.html">Edit Posts</a></li>
             <li><a href="/tags.html">Edit Tags</a></li>
             <li><a href="/users.html">Users</a></li>
+            <li id="login"></li>
           </ul>
 
           <ul id="mobileNav" class="side-nav">
@@ -53,6 +54,7 @@
             <li><a href="/all_posts.html">Edit Posts</a></li>
             <li><a href="/tags.html">Edit Tags</a></li>
             <li><a href="/users.html">Users</a></li>
+            <li id="login"></li>
           </ul>
 
         </div>
