--- a/public/tags.html
+++ b/public/tags.html
@@ -62,83 +62,36 @@
     <main>
 
       <div class="container">
-        <section class="row">
+<div class="row">
 
-
-          <div class="col s12 m6">
-
+        <section>
+          <div class="col s12 m6 collectionCol center-align">
+            <h5>Available Tags</h5>
           <form action="#" id="tagsForm">
-              <!-- <p>
-                <input type="checkbox" id="test5" />
-                <label for="test5">Red</label>
-              </p>
-              <p>
-                <input type="checkbox" id="test6" />
-                <label for="test6">Yellow</label>
-              </p>
-              <p>
-                <input type="checkbox" id="test7" />
-                <label for="test7">Green</label>
-              </p>
-              <p>
-                <input type="checkbox" id="test8" />
-                <label for="test8">Blue</label>
-              </p>-->
           <a class="waves-effect waves-light btn" id="deleteTag">Delete</a>
             </form>
+          </div>
+        </section>
 
-</div>
-</section>
-<section id="newTag" class="row">
+        <section id="newTag">
+          <form class="col s12 m6 collectionCol">
 
-    <form class="col s12">
-
-      <div class="input-field col s6">
+<h5>Add New Tag</h5>
+      <div class="input-field">
         <input id="tagName" type="text" class="validate">
         <label for="tagName">Tag Name</label>
       </div>
-
      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
        <i class="material-icons right">send</i>
      </button>
-
    </form>
-
 </section>
-
-        <!-- <form class="col s12" id="new_tag">
-
-          <div class="input-field col s6">
-            <input id="tag_name" type="text" class="validate">
-            <label for="tag_name">Tag Name</label>
-          </div>
-
-          <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-            <i class="material-icons right">send</i>
-          </button>
-
-        </form> -->
-
-<!-- <div class="col s12 m6 input-field">
+</div>
 
 
-  <input placeholder="Add New Tag"  type="text" class="validate" id="new_tag">
-            <label for="new_tag" ></label>
-            <button class="btn waves-effect waves-light" id="submit_tag" type="submit" name="action">Submit
-    <i class="material-icons right">send</i>
-  </button>
-
-          </div> -->
-
-
-
-
-
-
-    </div><!--container-->
+    </div>
 
     </main>
-
     <footer class="page-footer deep-purple darken-4">
       <div class="footer-copyright">
         <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
