--- a/public/tags.html
+++ b/public/tags.html
@@ -65,7 +65,7 @@
 <div class="row">
 
         <section>
-          <div class="col s12 m6 collectionCol center-align">
+          <div class="col s12 m6 collectionCol">
             <h5>Available Tags</h5>
           <form action="#" id="tagsForm">
           <a class="waves-effect waves-light btn" id="deleteTag">Delete</a>
