#46 added placeholder tag area

--- a/public/blog.html
+++ b/public/blog.html
@@ -60,15 +60,26 @@
       </div>
 
       <div class="container">
+<div class="row">
 
         <h2>Posts</h2>
-
-        <section id="posts" class="row">
-
-
-
+        <section id="posts" class="col s12 m10">
     </section>
 
+<div class="col s12 m2">
+
+
+ <ul>
+   <li><a href="#!">Honey</a></li>
+   <li><a href="#!">Caramel</a></li>
+   <li><a href="#!">Diabetes</a></li>
+   <li><a href="#!">Taffy</a></li>
+   <li><a href="#!">Laffy Taffy</a></li>
+   <li><a href="#!">Sex on the Beach</a></li>
+ </ul>
+</div>
+
+  </div>
     </div><!--container-->
 
     </main>
