--- a/public/blog.html
+++ b/public/blog.html
@@ -62,7 +62,7 @@
       <div class="container">
 <div class="row">
 
-        <h2>Posts</h2>
+        <!-- <h2>Posts</h2> -->
         <section id="posts" class="col s12 m10">
     </section>
 
