Add ability to add tags to new post. #56

--- a/public/edit_post.html
+++ b/public/edit_post.html
@@ -81,6 +81,9 @@
                <textarea id="content" class="materialize-textarea"></textarea>
                <label for="textarea1">Content</label>
              </div>
+             <div class="col s12">
+               <ul id="blogTags"></ul>
+             </div>
 
              <a class="waves-effect waves-light btn deep-purple darken-4" id="updatePost">Edit Post</a>
 
