--- a/public/new_post.html
+++ b/public/new_post.html
@@ -9,7 +9,7 @@
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
-    <script defer src="js/nav.js"></script
+    <script defer src="js/nav.js"></script>
     <script defer src="js/new_post.js"></script>
 
     <!--Import Google Icon Font-->
@@ -84,6 +84,8 @@
                <label for="textarea1">Content</label>
              </div>
 
+
+
              <button class="btn waves-effect waves-light" type="submit" name="action">Submit
                <i class="material-icons right">send</i>
              </button>
@@ -91,6 +93,9 @@
            </form>
 
        </section>
+       <div class="col s12">
+         <ul id="blogTags"></ul>
+       </div>
 
       </div><!--container-->
 
