--- a/public/new_post.html
+++ b/public/new_post.html
@@ -84,11 +84,11 @@
                <label for="textarea1">Content</label>
              </div>
 
-
-
-             <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+              <a class="waves-effect waves-light btn" id="submit">Submit</a>
+<!--
+             <button class="btn waves-effect waves-light"  type="submit" name="action">Submit
                <i class="material-icons right">send</i>
-             </button>
+             </button> -->
 
            </form>
 
