--- a/public/posts_tags.html
+++ b/public/posts_tags.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Blog</title>
+    <title>Posts By Tag</title>
     <!--Import jQuery before materialize.js-->
     <script
       defer src="https://code.jquery.com/jquery-2.2.4.min.js"
@@ -10,7 +10,7 @@
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
     <script defer src="js/nav.js"></script>
-    <script defer src="js/blog.js"></script>
+    <script defer src="js/posts_by_tag.js"></script>
 
     <!--Import Google Icon Font-->
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -30,7 +30,7 @@
         <div class="nav-wrapper">
 
           <a href="/index.html" class="brand-logo">
-            <span class="logo-text">Blog</span>
+            <span class="logo-text">Posts By Tag</span>
           </a>
 
           <a class="button-collapse" data-activates="mobileNav">
@@ -55,29 +55,11 @@
 
     <main>
 
-      <div class="parallax-container">
-        <div class="parallax"><img src="images/forest_flowers.jpeg"></div>
-      </div>
-
       <div class="container">
-<div class="row">
 
-        <!-- <h2>Posts</h2> -->
-        <section id="posts" class="col s12 m10">
-    </section>
+        <section id="posts" class="row">
+        </section>
 
-<div class="col s12 m2">
- <ul id="blogTags">
-   <!-- <li><a href="posts_tags.html?id=1">Honey</a></li>
-   <li><a href="/posts_by_tag/1">Caramel</a></li>
-   <li><a href="#!">Diabetes</a></li>
-   <li><a href="#!">Taffy</a></li>
-   <li><a href="#!">Laffy Taffy</a></li>
-   <li><a href="#!">Sex on the Beach</a></li> -->
- </ul>
-</div>
-
-  </div>
     </div><!--container-->
 
     </main>
