added tag name header to posts displayed associated with said tagl

--- a/public/posts_tags.html
+++ b/public/posts_tags.html
@@ -30,7 +30,7 @@
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
-            <span class="logo-text">Edit Post</span>
+            <span class="logo-text">Post by Tag</span>
           </a>
 
           <a class="button-collapse" data-activates="mobileNav">
@@ -60,7 +60,8 @@
     <main>
 
       <div class="container">
-
+      <div id="tagTitle">
+      </div>
         <section id="posts" class="row">
         </section>
 
