fixed input display

--- a/public/blog.html
+++ b/public/blog.html
@@ -56,7 +56,7 @@
     <main>
 
       <div class="parallax-container">
-        <div class="parallax"><img src="images/forest_flowers.jpeg"></div>
+        <div class="parallax"><img src="images/cupcakes.jpg"></div>
       </div>
 
       <div class="container">
