--- a/public/edit_post.html
+++ b/public/edit_post.html
@@ -68,24 +68,27 @@
             <form class="col">
 
               <div class="input-field col s6">
+                <h5>Title</h5>
                 <input id="title" type="text" class="validate">
-                <label for="title">Title</label>
+                <label for="title"></label>
               </div>
 
              <div class="input-field col s6">
+               <h5>Image URL</h5>
                <input id="img" type="text" class="validate">
-               <label for="img">Image</label>
+               <label for="img"></label>
              </div>
 
              <div class="input-field col s12">
+               <h5>Content</h5>
                <textarea id="content" class="materialize-textarea"></textarea>
-               <label for="textarea1">Content</label>
+               <label for="textarea1"></label>
              </div>
              <div class="col s12">
                <ul id="blogTags"></ul>
              </div>
 
-             <a class="waves-effect waves-light btn deep-purple darken-4" id="updatePost">Edit Post</a>
+             <a class="waves-effect waves-light btn deep-purple darken-4" id="updatePost">Submit</a>
 
            </form>
 
