--- a/public/posts_tags.html
+++ b/public/posts_tags.html
@@ -30,7 +30,7 @@
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
-            <span class="logo-text">Post by Tag</span>
+            <span class="logo-text">Betty's Bake Shop</span>
           </a>
 
           <a class="button-collapse" data-activates="mobileNav">
@@ -38,19 +38,15 @@
           </a>
 
           <ul class="right hide-on-med-and-down">
-            <li><a href="/admin.html">Admin</a></li>
-            <li><a href="/new_post.html">Create New Post</a></li>
-            <li><a href="/all_posts.html">Edit Posts</a></li>
-            <li><a href="/tags.html">Edit Tags</a></li>
-            <li><a href="/users.html">Users</a></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Order</a></li>
+            <li><a href="/blog.html">Blog</a></li>
           </ul>
 
           <ul id="mobileNav" class="side-nav">
-            <li><a href="/admin.html">Admin</a></li>
-            <li><a href="/new_post.html">Create New Post</a></li>
-            <li><a href="/all_posts.html">Edit Posts</a></li>
-            <li><a href="/tags.html">Edit Tags</a></li>
-            <li><a href="/users.html">Users</a></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Order</a></li>
+            <li><a href="/blog.html">Blog</a></li>
           </ul>
 
         </div>
