--- a/public/blog.html
+++ b/public/blog.html
@@ -29,8 +29,8 @@
       <nav class="deep-purple darken-4">
         <div class="nav-wrapper">
 
-          <a href="/index.html" class="brand-logo">
-            <span class="logo-text">Blog</span>
+          <a href="/admin.html" class="brand-logo">
+            <span class="logo-text">Betty's Bake Shop</span>
           </a>
 
           <a class="button-collapse" data-activates="mobileNav">
@@ -38,15 +38,15 @@
           </a>
 
           <ul class="right hide-on-med-and-down">
-            <li><a href="/index.html">Home</a></li>
-            <li class="firstNavItem"></li>
-            <li class="secondNavItem"></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Order</a></li>
+            <li><a href="/blog.html">Blog</a></li>
           </ul>
 
           <ul id="mobileNav" class="side-nav">
-            <li><a href="/index.html">Posts</a></li>
-            <li class="firstNavItem"></li>
-            <li class="secondNavItem"></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Order</a></li>
+            <li><a href="/blog.html">Blog</a></li>
           </ul>
 
         </div>
