--- a/public/new_post.html
+++ b/public/new_post.html
@@ -84,18 +84,18 @@
                <label for="textarea1">Content</label>
              </div>
 
+             <div class="col s12">
+               <h4>Add Tags</h4>
+               <ul id="blogTags" class="tags"></ul>
+             </div>
+
               <a class="waves-effect waves-light btn" id="submit">Submit</a>
-<!--
-             <button class="btn waves-effect waves-light"  type="submit" name="action">Submit
-               <i class="material-icons right">send</i>
-             </button> -->
+
 
            </form>
 
        </section>
-       <div class="col s12">
-         <ul id="blogTags"></ul>
-       </div>
+
 
       </div><!--container-->
 
