--- a/public/new_post.html
+++ b/public/new_post.html
@@ -102,8 +102,23 @@
     </main>
 
     <footer class="page-footer deep-purple darken-4">
-      <div class="footer-copyright">
-        <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
+      <div class="row">
+    <div class="col s12 m1">
+
+    </div>
+        <div class="footer-copyright col s12 m3 align-right">
+          <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
+        </div>
+        <div class="col m4 hide-on-small-only">
+
+        </div>
+        <div class="col s12 m4 align-right">
+
+          <ul>
+            <li><h5><a class="grey-text text-lighten-3" href="#!">Betty's Bake Shop -- Blog</a></h5></li>
+          </ul>
+        </div>
+
       </div>
     </footer>
 
