Design Front End

--- a/public/blog.html
+++ b/public/blog.html
@@ -24,9 +24,10 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
-  <body class="blue-grey lighten-5">
-    <div class="navbar-fixed">
-      <nav class="deep-purple darken-4">
+  <body class="front-end">
+    <header>
+    <div>
+      <nav>
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
@@ -38,51 +39,48 @@
           </a>
 
           <ul class="right hide-on-med-and-down">
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Order</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Menu">Menu</a></li>
             <li><a href="/blog.html">Blog</a></li>
           </ul>
 
           <ul id="mobileNav" class="side-nav">
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Menu</a></li>
-            <li><a href="#">Order</a></li>
             <li><a href="/blog.html">Blog</a></li>
           </ul>
 
         </div>
       </nav>
     </div>
+  </header>
 
     <main>
 
-      <div class="parallax-container">
+      <!-- <div class="parallax-container">
         <div class="parallax"><img src="images/cupcakes.jpg"></div>
-      </div>
+      </div> -->
 
-      <div class="container">
-<div class="row">
+      <div class="content">
+        <div class="row posts">
+
 
         <!-- <h2>Posts</h2> -->
         <section id="posts" class="col s12 m10">
-    </section>
+      </section>
 
-<div class="col s12 m2">
- <ul id="blogTags">
-   <!-- <li><a href="posts_tags.html?id=1">Honey</a></li>
-   <li><a href="/posts_by_tag/1">Caramel</a></li>
-   <li><a href="#!">Diabetes</a></li>
-   <li><a href="#!">Taffy</a></li>
-   <li><a href="#!">Laffy Taffy</a></li>
-   <li><a href="#!">Sex on the Beach</a></li> -->
- </ul>
-</div>
+    <div class="col s12 m2 tags">
+      <h4>Tags</h4>
+     <ul id="blogTags">
+     </ul>
+    </div>
 
   </div>
     </div><!--container-->
 
     </main>
 
-    <footer class="page-footer deep-purple darken-4">
+    <footer class="page-footer">
       <div class="footer-copyright">
         <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
       </div>
