--- a/public/admin.html
+++ b/public/admin.html
@@ -23,9 +23,9 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
-  <body class="blue-grey lighten-5">
+  <body>
     <div class="navbar-fixed">
-      <nav class="deep-purple darken-4">
+      <nav class="grey darken-4">
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
@@ -60,13 +60,13 @@
     </div>
 
     <main>
-      <div class="container">
+      <div class="admin_panel">
         <div class="row">
           <div class="col s12 collectionCol">
             <div class="row">
               <div class="col s12">
                 <a href="new_post.html">
-                <div class="card-panel teal center-align">
+                <div class="card-panel grey darken-3 center-align">
                   <span class="white-text"><h5>New Post</h5>
                   </span>
                 </div>
@@ -76,7 +76,7 @@
             <div class="row">
               <div class="col s12">
                 <a href="all_posts.html">
-                <div class="card-panel teal center-align">
+                <div class="card-panel grey darken-3 center-align">
                   <span class="white-text"><h5>All Posts</h5>
                   </span>
                 </div>
@@ -86,7 +86,7 @@
             <div class="row">
               <div class="col s12">
                 <a href="tags.html">
-                <div class="card-panel teal center-align">
+                <div class="card-panel grey darken-3 center-align">
                   <span class="white-text"><h5>Tags</h5>
                   </span>
                 </div>
@@ -96,7 +96,7 @@
             <div class="row">
               <div class="col s12">
                 <a href="users.html">
-                <div class="card-panel teal center-align">
+                <div class="card-panel grey darken-3  center-align">
                   <span class="white-text "><h5>Users</h5>
                   </span>
                 </div>
@@ -107,21 +107,9 @@
           </div>
         </div>
       </div>
-      <!-- <div class="container">
-      <div class="row">
-      <div class="col s12 collectionCol">
 
-      <div class="collection">
-      <a href="#!" class="collection-item center-align">New Post</a>
-      <a href="#!" class="collection-item center-align">All Post</a>
-      <a href="#!" class="collection-item center-align">Tags</a>
-      <a href="#!" class="collection-item center-align">Users</a>
-    </div>
-  </div>
-</div>
-</div> -->
 </main>
-<footer class="page-footer deep-purple darken-4">
+<footer class="page-footer grey darken-4">
   <div class="row">
 <div class="col s12 m1">
 
