Style front-end pages #61

--- a/public/posts_tags.html
+++ b/public/posts_tags.html
@@ -24,9 +24,9 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
-  <body class="blue-grey lighten-5">
-    <div class="navbar-fixed">
-      <nav class="deep-purple darken-4">
+  <body class="front-end">
+    <div>
+      <nav>
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
@@ -38,14 +38,14 @@
           </a>
 
           <ul class="right hide-on-med-and-down">
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Menu</a></li>
-            <li><a href="#">Order</a></li>
             <li><a href="/blog.html">Blog</a></li>
           </ul>
 
           <ul id="mobileNav" class="side-nav">
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Menu</a></li>
-            <li><a href="#">Order</a></li>
             <li><a href="/blog.html">Blog</a></li>
           </ul>
 
@@ -65,7 +65,7 @@
 
     </main>
 
-    <footer class="page-footer deep-purple darken-4">
+    <footer class="page-footer">
       <div class="footer-copyright">
         <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
       </div>
