--- a/public/blog.html
+++ b/public/blog.html
@@ -40,14 +40,12 @@
 
           <ul class="right hide-on-med-and-down">
             <li><a href="index.html">Home</a></li>
-            <li><a href="Menu">Menu</a></li>
-            <li><a href="/blog.html">Blog</a></li>
+            <li><a href="#">Menu</a></li>
           </ul>
 
           <ul id="mobileNav" class="side-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Menu</a></li>
-            <li><a href="/blog.html">Blog</a></li>
           </ul>
 
         </div>
@@ -57,15 +55,10 @@
 
     <main>
 
-      <!-- <div class="parallax-container">
-        <div class="parallax"><img src="images/cupcakes.jpg"></div>
-      </div> -->
-
       <div class="content">
         <div class="row posts">
 
 
-        <!-- <h2>Posts</h2> -->
         <section id="posts" class="col s12 m10">
       </section>
 
