--- a/public/blog.html
+++ b/public/blog.html
@@ -26,7 +26,7 @@
   </head>
   <body class="front-end">
     <header>
-    <div>
+    <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper">
 
