--- a/public/posts_tags.html
+++ b/public/posts_tags.html
@@ -25,7 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body class="front-end">
-    <div>
+    <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper">
 
