Close #61 Style pages

--- a/public/admin.html
+++ b/public/admin.html
@@ -23,8 +23,8 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
-  <body>
-    <div class="navbar-fixed">
+  <body class="back-end">
+    <div>
       <nav class="grey darken-4">
         <div class="nav-wrapper">
 
