--- a/public/post.html
+++ b/public/post.html
@@ -24,9 +24,9 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
-  <body class="blue-grey lighten-5">
-    <div class="navbar-fixed">
-      <nav class="deep-purple darken-4">
+  <body class="back-end">
+    <div>
+      <nav class="grey darken-4">
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
@@ -71,7 +71,7 @@
 
 
         </section>
-        <a class="waves-effect waves-light btn deep-purple darken-4" id="deletePost" href="#modal1">Delete</a>
+        <a class="waves-effect waves-light btn grey darken-4" id="deletePost" href="#modal1">Delete</a>
 
         <div id="modal1" class="modal">
             <div class="modal-conent">
@@ -87,35 +87,13 @@
          </div>
        </div>
 
-       <a class="waves-effect waves-light btn deep-purple darken-4" id="editPost" href="edit_post.html">Edit Post</a>
-
-       <!-- <div>  <a id="deletePost" class="waves-effect waves-light btn-large red">
-              <i class="material-icons left">delete</i>
-              Delete
-            </a>
-          </div> -->
-
-          <!-- <div id="deleteModal" class="modal">
-            <div class="modal-content">
-              <h4>Delete this post?</h4>
-              <p>You won't be able to undo this operation.</p>
-            </div>
-
-            <div class="modal-footer">
-          <a id="confirmDelete" class="modal-action modal-close waves-effect waves-green btn-flat">
-            <strong>Delete</strong>
-          </a>
-
-          <a id="cancelDelete" class="modal-action modal-close waves-effect waves-red btn-flat">
-            Cancel
-          </a>
-        </div> -->
+       <a class="waves-effect waves-light btn grey darken-4" id="editPost" href="edit_post.html">Edit Post</a>
 
     </div><!--container-->
 
     </main>
 
-    <footer class="page-footer deep-purple darken-4">
+    <footer class="page-footer grey darken-4">
       <div class="footer-copyright">
         <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
       </div>
