--- a/public/login.html
+++ b/public/login.html
@@ -25,9 +25,9 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
-  <body class="blue-grey lighten-5">
-    <div class="navbar-fixed">
-      <nav class="deep-purple darken-4">
+  <body class="back-end">
+    <div>
+      <nav class="grey darken-4">
         <div class="nav-wrapper">
 
           <a href="/index.html" class="brand-logo">
@@ -75,7 +75,7 @@
             </div>
 
             <div class="card-action">
-              <button class="waves-effect waves-light btn-large" type="submit" name="action">
+              <button class="waves-effect waves-light grey" type="submit" name="action">
                 <i class="material-icons left">lock</i>
                 Log in
               </button>
@@ -88,9 +88,24 @@
     </div>
     </main>
 
-    <footer class="page-footer deep-purple darken-4">
-      <div class="footer-copyright">
-        <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
+    <footer class="page-footer grey darken-4">
+      <div class="row">
+    <div class="col s12 m1">
+
+    </div>
+        <div class="footer-copyright col s12 m3 align-right">
+          <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
+        </div>
+        <div class="col m4 hide-on-small-only">
+
+        </div>
+        <div class="col s12 m4 align-right">
+
+          <ul>
+            <li><h5><a class="grey-text text-lighten-3" href="#!">Betty's Bake Shop -- Blog</a></h5></li>
+          </ul>
+        </div>
+
       </div>
     </footer>
 
