--- a/public/new_post.html
+++ b/public/new_post.html
@@ -24,9 +24,9 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
-  <body class="blue-grey lighten-5">
-    <div class="navbar-fixed">
-      <nav class="deep-purple darken-4">
+  <body class="back-end">
+    <div>
+      <nav class="grey darken-4">
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
@@ -89,7 +89,7 @@
                <ul id="blogTags" class="tags"></ul>
              </div>
 
-              <a class="waves-effect waves-light btn" id="submit">Submit</a>
+              <a class="waves-effect waves-light btn grey darken-4" id="submit">Submit</a>
 
 
            </form>
@@ -101,7 +101,7 @@
 
     </main>
 
-    <footer class="page-footer deep-purple darken-4">
+    <footer class="page-footer grey darken-4">
       <div class="row">
     <div class="col s12 m1">
 
