--- a/public/tags.html
+++ b/public/tags.html
@@ -24,9 +24,9 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
-  <body class="blue-grey lighten-5">
-    <div class="navbar-fixed">
-      <nav class="deep-purple darken-4">
+  <body class="back-end">
+    <div>
+      <nav class="grey darken-4">
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
@@ -68,7 +68,7 @@
           <div class="col s12 m6 collectionCol">
             <h5>Available Tags</h5>
           <form action="#" id="tagsForm">
-          <a class="waves-effect waves-light btn" id="deleteTag">Delete</a>
+          <a class="waves-effect waves-light btn grey darken-4" id="deleteTag">Delete</a>
             </form>
           </div>
         </section>
@@ -81,7 +81,7 @@
         <input id="tagName" type="text" class="validate">
         <label for="tagName">Tag Name</label>
       </div>
-     <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+     <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Submit
        <i class="material-icons right">send</i>
      </button>
    </form>
@@ -92,7 +92,7 @@
     </div>
 
     </main>
-    <footer class="page-footer deep-purple darken-4">
+    <footer class="page-footer grey darken-4">
       <div class="row">
     <div class="col s12 m1">
 
