--- a/public/users.html
+++ b/public/users.html
@@ -26,9 +26,9 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
-  <body class="blue-grey lighten-5">
-    <div class="navbar-fixed">
-      <nav class="deep-purple darken-4">
+  <body class="back-end">
+    <div>
+      <nav class="grey darken-4">
         <div class="nav-wrapper">
 
           <a href="/admin.html" class="brand-logo">
@@ -85,7 +85,7 @@
         </div>
 
         <div class="card-action">
-          <button class="waves-effect waves-light btn-large" type="submit" name="action">
+          <button class="waves-effect waves-light btn-large grey darken-4" type="submit" name="action">
             <i class="material-icons left">person</i>
             Submit
           </button>
@@ -106,7 +106,7 @@
 
     </main>
 
-    <footer class="page-footer deep-purple darken-4">
+    <footer class="page-footer grey darken-4">
       <div class="row">
     <div class="col s12 m1">
 
