--- a/public/blog.html
+++ b/public/blog.html
@@ -9,7 +9,6 @@
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
-    <script defer src="js/nav.js"></script>
     <script defer src="js/blog.js"></script>
 
     <!--Import Google Icon Font-->
@@ -30,7 +29,7 @@
       <nav>
         <div class="nav-wrapper">
 
-          <a href="/admin.html" class="brand-logo">
+          <a href="/indexhtml" class="brand-logo">
             <span class="logo-text">Betty's Bake Shop</span>
           </a>
 
