--- a/public/blog_post.html
+++ b/public/blog_post.html
@@ -9,7 +9,7 @@
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
-    <script defer src="js/nav.js"></script>
+    <script defer src="js/front-nav.js"></script>
     <script defer src="js/blog_post.js"></script>
 
     <!--Import Google Icon Font-->
@@ -29,7 +29,7 @@
       <nav>
         <div class="nav-wrapper">
 
-          <a href="/admin.html" class="brand-logo">
+          <a href="/index.html" class="brand-logo">
             <span class="logo-text">Betty's Bake Shop</span>
           </a>
 
