Close #63 Add index page.

--- a/public/blog.html
+++ b/public/blog.html
@@ -9,6 +9,7 @@
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"></script>
     <script defer src="js/vendor/materialize.js"></script>
+    <script defer src="js/front-nav.js"></script>
     <script defer src="js/blog.js"></script>
 
     <!--Import Google Icon Font-->
