--- a/public/edit_post.html
+++ b/public/edit_post.html
@@ -86,6 +86,7 @@
                <textarea id="content" class="materialize-textarea"></textarea>
                <label for="textarea1"></label>
              </div>
+
              <div class="col s12">
                <ul id="blogTags"></ul>
              </div>
@@ -102,21 +103,16 @@
 
     <footer class="page-footer grey darken-4">
       <div class="row">
-    <div class="col s12 m1">
 
-    </div>
-        <div class="footer-copyright col s12 m3 align-right">
+       <div class="footer-copyright col s6 align-right">
           <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
-        </div>
-        <div class="col m4 hide-on-small-only">
+       </div>
 
-        </div>
-        <div class="col s12 m4 align-right">
-
-          <ul>
-            <li><h5><a class="grey-text text-lighten-3" href="#!">Betty's Bake Shop -- Blog</a></h5></li>
-          </ul>
-        </div>
+       <div class="col s6">
+         <ul>
+          <li class="back_footer"><a class="grey-text text-lighten-3" href="/blog.html">Betty's Bake Shop -- Blog</a></li>
+         </ul>
+       </div>
 
       </div>
     </footer>
