--- a/public/login.html
+++ b/public/login.html
@@ -27,7 +27,7 @@
   </head>
   <body class="back-end">
     <div>
-      <nav class="grey darken-4">
+      <nav class="grey darken-4 login_nav">
         <div class="nav-wrapper">
 
           <a href="/index.html" class="brand-logo">
@@ -49,14 +49,11 @@
     </div>
 
     <main>
-      <div class="container">
-<div class="row">
-  <span></span>
-</div>
+     <div class="container">
       <div class="row">
-        <div class="col offset-m3 m6 s12 ">
-        <form id="loginForm" >
-          <div class="card ">
+       <div class="col offset-m3 m6 s12 ">
+        <form id="loginForm">
+          <div class="card">
             <div class="card-content">
               <span class="card-title">Log in</span>
               <div class="row">
@@ -82,32 +79,26 @@
             </div>
           </div>
         </form>
-      </div>
+       </div>
       </div>
 
-    </div>
+     </div>
     </main>
 
     <footer class="page-footer grey darken-4">
       <div class="row">
-    <div class="col s12 m1">
 
-    </div>
-        <div class="footer-copyright col s12 m3 align-right">
+       <div class="footer-copyright col s6 align-right">
           <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
-        </div>
-        <div class="col m4 hide-on-small-only">
+       </div>
 
-        </div>
-        <div class="col s12 m4 align-right">
-
-          <ul>
-            <li><h5><a class="grey-text text-lighten-3" href="#!">Betty's Bake Shop -- Blog</a></h5></li>
-          </ul>
-        </div>
+       <div class="col s6">
+         <ul>
+          <li class="back_footer"><a class="grey-text text-lighten-3" href="/blog.html">Betty's Bake Shop -- Blog</a></li>
+         </ul>
+       </div>
 
       </div>
     </footer>
-
   </body>
 </html>
