--- a/public/new_post.html
+++ b/public/new_post.html
@@ -60,64 +60,57 @@
     </div>
 
     <main>
+     <div class="container">
 
-      <div class="container">
+      <h2>New Post</h2>
 
-        <h2>New Post</h2>
+      <section id="newPost" class="row">
 
-        <section id="newPost" class="row">
+        <form class="col s12">
 
-            <form class="col s12">
+          <div class="input-field col s12">
+            <input id="title" type="text" class="validate">
+            <label for="title">Title</label>
+          </div>
 
-              <div class="input-field col s12">
-                <input id="title" type="text" class="validate">
-                <label for="title">Title</label>
-              </div>
+          <div class="input-field col s12">
+             <input id="img" type="text" class="validate">
+             <label for="img">Image</label>
+          </div>
 
-             <div class="input-field col s12">
-               <input id="img" type="text" class="validate">
-               <label for="img">Image</label>
-             </div>
+          <div class="input-field col s12">
+             <textarea id="content" class="materialize-textarea"></textarea>
+             <label for="textarea1">Content</label>
+          </div>
 
-             <div class="input-field col s12">
-               <textarea id="content" class="materialize-textarea"></textarea>
-               <label for="textarea1">Content</label>
-             </div>
-
-             <div class="col s12">
-               <h4>Add Tags</h4>
-               <ul id="blogTags" class="tags"></ul>
-             </div>
+         <div class="col s12">
+           <h4>Add Tags</h4>
+           <ul id="blogTags" class="tags"></ul>
+         </div>
 
               <a class="waves-effect waves-light btn grey darken-4" id="submit">Submit</a>
 
+        </form>
 
-           </form>
-
-       </section>
+      </section>
 
 
-      </div><!--container-->
+     </div><!--container-->
 
     </main>
 
     <footer class="page-footer grey darken-4">
       <div class="row">
-    <div class="col s12 m1">
 
-    </div>
-        <div class="footer-copyright col s12 m3 align-right">
+       <div class="footer-copyright col s6 align-right">
           <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
-        </div>
-        <div class="col m4 hide-on-small-only">
+       </div>
 
-        </div>
-        <div class="col s12 m4 align-right">
-
-          <ul>
-            <li><h5><a class="grey-text text-lighten-3" href="#!">Betty's Bake Shop -- Blog</a></h5></li>
-          </ul>
-        </div>
+       <div class="col s6">
+         <ul>
+          <li class="back_footer"><a class="grey-text text-lighten-3" href="/blog.html">Betty's Bake Shop -- Blog</a></li>
+         </ul>
+       </div>
 
       </div>
     </footer>
