--- a/public/post.html
+++ b/public/post.html
@@ -65,37 +65,43 @@
       <div class="container">
 
         <section id="post" class="row">
-          <!-- <button id="deletePost" class="btn waves-effect waves-light" type="submit" name="action">Submit
-    <i class="material-icons right">send</i>
-  </button> -->
-
 
         </section>
         <a class="waves-effect waves-light btn grey darken-4" id="deletePost" href="#modal1">Delete</a>
 
         <div id="modal1" class="modal">
-            <div class="modal-conent">
-              <h4>Are you sure you want to delete this post? </h4>
-              <p>You can't undo this action.</p>
-            </div>
-            <div class="modal-footer">
-         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat" id="confirmDelete">Agree</a>
-
-         <a id="cancelDelete" class="modal-action modal-close waves-effect waves-red btn-flat">
-           Cancel
-         </a>
+         <div class="modal-conent">
+            <h4>Are you sure you want to delete this post? </h4>
+            <p>You can't undo this action.</p>
          </div>
-       </div>
+            <div class="modal-footer">
+             <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat" id="confirmDelete">Agree</a>
+
+             <a id="cancelDelete" class="modal-action modal-close waves-effect waves-red btn-flat">
+               Cancel
+             </a>
+           </div>
+        </div>
 
        <a class="waves-effect waves-light btn grey darken-4" id="editPost" href="edit_post.html">Edit Post</a>
 
-    </div><!--container-->
+     </div><!--container-->
 
     </main>
 
     <footer class="page-footer grey darken-4">
-      <div class="footer-copyright">
-        <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
+      <div class="row">
+
+       <div class="footer-copyright col s6 align-right">
+          <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
+       </div>
+
+       <div class="col s6">
+         <ul>
+          <li class="back_footer"><a class="grey-text text-lighten-3" href="/blog.html">Betty's Bake Shop -- Blog</a></li>
+         </ul>
+       </div>
+
       </div>
     </footer>
 
