--- a/public/tags.html
+++ b/public/tags.html
@@ -61,54 +61,48 @@
 
     <main>
 
-      <div class="container">
-<div class="row">
+     <div class="container">
+      <div class="row">
 
         <section>
           <div class="col s12 m6 collectionCol">
             <h5>Available Tags</h5>
-          <form action="#" id="tagsForm">
-          <a class="waves-effect waves-light btn grey darken-4" id="deleteTag">Delete</a>
+            <form action="#" id="tagsForm">
+             <a class="waves-effect waves-light btn grey darken-4" id="deleteTag">Delete</a>
             </form>
           </div>
         </section>
 
         <section id="newTag">
           <form class="col s12 m6 collectionCol">
-
-<h5>Add New Tag</h5>
-      <div class="input-field">
-        <input id="tagName" type="text" class="validate">
-        <label for="tagName">Tag Name</label>
+            <h5>Add New Tag</h5>
+            <div class="input-field">
+             <input id="tagName" type="text" class="validate">
+             <label for="tagName">Tag Name</label>
+            </div>
+           <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Submit
+            <i class="material-icons right">send</i>
+          </button>
+         </form>
+        </section>
       </div>
-     <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Submit
-       <i class="material-icons right">send</i>
-     </button>
-   </form>
-</section>
-</div>
 
 
-    </div>
+     </div>
 
     </main>
     <footer class="page-footer grey darken-4">
       <div class="row">
-    <div class="col s12 m1">
 
-    </div>
-        <div class="footer-copyright col s12 m3 align-right">
+       <div class="footer-copyright col s6 align-right">
           <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
-        </div>
-        <div class="col m4 hide-on-small-only">
+       </div>
 
-        </div>
-        <div class="col s12 m4 align-right">
-
-          <ul>
-            <li><h5><a class="grey-text text-lighten-3" href="#!">Betty's Bake Shop -- Blog</a></h5></li>
-          </ul>
-        </div>
+       <div class="col s6">
+         <ul>
+          <li class="back_footer"><a class="grey-text text-lighten-3" href="/blog.html">Betty's Bake Shop -- Blog</a></li>
+         </ul>
+       </div>
 
       </div>
     </footer>
