--- a/public/users.html
+++ b/public/users.html
@@ -62,67 +62,61 @@
     </div>
 
     <main>
-<div class="container">
-  <div class="row">
-    <div class="s12 col collectionCol">
-    <form id="newUserForm" >
-      <div class="card ">
-        <div class="card-content">
-          <span class="card-title">Add New User</span>
-          <div class="row">
+     <div class="container">
+      <div class="row">
+       <div class="s12 col collectionCol">
+        <form id="newUserForm" >
+         <div class="card ">
+          <div class="card-content">
+           <span class="card-title">Add New User</span>
+           <div class="row">
             <div class="input-field col s12">
               <input placeholder="Email" id="email" type="text" class="validate">
               <label for="email">Email</label>
             </div>
-          </div>
+           </div>
 
-          <div class="row">
+           <div class="row">
             <div class="input-field col s12">
               <input placeholder="Password" id="password" type="password" class="validate">
               <label for="password">Password</label>
             </div>
+           </div>
           </div>
-        </div>
 
-        <div class="card-action">
-          <button class="waves-effect waves-light btn-large grey darken-4" type="submit" name="action">
-            <i class="material-icons left">person</i>
+          <div class="card-action">
+           <button class="waves-effect waves-light btn-large grey darken-4" type="submit" name="action">
+             <i class="material-icons left">person</i>
             Submit
-          </button>
-        </div>
+           </button>
+          </div>
+         </div>
+        </form>
+       </div>
       </div>
-    </form>
-  </div>
-  </div>
-  <div class="row">
-    <ul class="collection with-header" id="allUsers">
+      <div class="row">
+       <ul class="collection with-header" id="allUsers">
         <li class="collection-header"><h5>Users</h5>
-<h6 class="right-align">DELETE</h6>
+         <h6 class="right-align">DELETE</h6>
         </li>
-
-      </ul>
-  </div>
-</div>
+       </ul>
+      </div>
+    </div>
 
     </main>
 
     <footer class="page-footer grey darken-4">
       <div class="row">
-    <div class="col s12 m1">
 
-    </div>
-        <div class="footer-copyright col s12 m3 align-right">
+       <div class="footer-copyright col s6 align-right">
           <small>© 2017 Blog Maker, Inc. All Rights Reserved</small>
-        </div>
-        <div class="col m4 hide-on-small-only">
+       </div>
 
-        </div>
-        <div class="col s12 m4 align-right">
-
-          <ul>
-            <li><h5><a class="grey-text text-lighten-3" href="/blog.html">Betty's Bake Shop -- Blog</a></h5></li>
-          </ul>
-        </div>
+       <div class="col s6">
+         <ul>
+          <li class="back_footer"><a class="grey-text text-lighten-3" href="/blog.html">Betty's Bake Shop -- Blog</a></li>
+         </ul>
+       </div>
 
       </div>
     </footer>
